--- a/src/TikTokLoaderMAUI/i18n/GlobalResource.de.resx
+++ b/src/TikTokLoaderMAUI/i18n/GlobalResource.de.resx
@@ -109,4 +109,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>Abbrechen</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>Fehler</value>
+  </data>
 </root>
